add: project trashzilla

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
                     <h2>Now</h2>
                     <p>Après des années de recherches, j'ai enfin trouvé le truc qui me fait vibrer : le code.
                         Aujourd'hui, je me forme comme Développeur Fullstack chez Ada Tech School. Entre projets en
-                        groupe, apprentissage intensif et échanges avec des pros du métier, chaque semaine est une
-                        parfaite combinaison de challenges et de découvertes.</p>
+                        groupe, apprentissage intensif et échanges avec des pros du métier, chaque semaine est un cocktail de challenges et de découvertes.</p>
                 </div>
                 <div class="about-item">
                     <div class="icon"><img src="./img/graduation_cap.png" alt="Background-Icon"></div>
@@ -74,7 +73,7 @@
                 <div class="about-item">
                     <div class="icon"><img src="./img/brickwall.png" alt="Stack-Icon"></div>
                     <h2>Stack</h2>
-                    <p>• HTML5, CSS3, JavaScript (ES6+), Python, Java, SQL (PostgreSQL)<br>• React.js, Django, Spring, Tailwind CSS<br>• Mais j'ai pu également voir du PHP, du C...</p>
+                    <p>• HTML5, CSS3, JavaScript (ES6+), Python, Java, SQL (MySQL, PostgreSQL)<br>• React.js, Django, Spring, Tailwind CSS<br>• Mais j'ai pu également voir du PHP, du C...</p>
                 </div>
             </div>
         </div>
@@ -132,14 +131,13 @@
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Projet 5</h1>
-                        <h2>Futur projet</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, in dolores impedit qui
-                            laborum hic vitae recusandae accusamus unde? Quidem fuga dicta maxime voluptatem aperiam
-                            adipisci mollitia molestias nobis dolor.</p>
+                        <h1>Trashzilla</h1>
+                        <h2>Appli de collecte de déchets</h2>
+                        <p>Authentification des membres d'une association. Vision admin et bénévoles. Base de données.</p>
+                        <p><a href="https://github.com/Hazbraaaa/PROJET_COLLECTIF_Trashzilla_Backend">Lien vers le GitHub</a></p>
                     </div>
                     <div class="project-img">
-                        <img src="./img/about.png" alt="Projet XXXXXXX">
+                        <img src="./img/trashzilla.png" alt="Projet Trashzilla">
                     </div>
                 </div>
             </div>
