update: skill intelliJ

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="about-item">
                     <div class="icon"><img src="./img/tools.png" alt="Skills-Icon"></div>
                     <h2>Skills</h2>
-                    <p>• Clean Code & bonnes pratiques<br>• Git / GitHub<br>• VS Code<br>• Postman<br>• Notion, Figma<br>• Méthodes Agiles (Scrum,
+                    <p>• Clean Code & bonnes pratiques<br>• Git / GitHub<br>• VS Code, IntelliJ<br>• Postman<br>• Notion, Figma<br>• Méthodes Agiles (Scrum,
                         Kanban)<br>• Tests unitaires<br>• Travail en équipe</p>
                 </div>
                 <div class="about-item">
